# mwAudio101

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
core/: BlockContext.h  CMakeLists.txt  Core.cpp  Engine.cpp  Engine.h
core/calibration/: ArpConstants.h  BackgroundLayerConstants.h  Calibration.h  CalibrationModel.h  CalibrationSelfTestConstants.h  CapabilityShimConstants.h  CcLearnMapConstants.h  ChorusConstants.h  ClockConstants.h  CompareFpConstants.h  ConstantSetSelector.h  ControlDispatchCcIngressConstants.h  ControlDispatchCharacterConstants.h  ControlDispatchConstants.h  ControlDispatchLfoConstants.h  ControlDispatchPwmVcfModConstants.h  ControlDispatchSeqArpConstants.h  ControlDispatchVcfConstants.h  ControlDriverConstants.h  ControlSubclassConstants.h  ControllerStripConstants.h  DelayConstants.h  DispatchCompleteConstants.h  DriftConstants.h  DriftModelConstants.h  DriveConstants.h  EditorLayoutConstants.h  EngineConstants.h  EnvLfoVcaConstants.h  FastTanhConstants.h  FilterGoldenCorpusConstants.h  FilterTablesConstants.h  FractionalDelayLineConstants.h  FxDispatchConstants.h  FxOversampler2xConstants.h  GlideConstants.h  GoldenKeyConstants.h  HostSmokeConstants.h  InitPatchConstants.h  LadderFilterConstants.h  (+42 more)
core/control/: Arpeggiator.cpp  Arpeggiator.h  Clock.cpp  Clock.h  ControlCore.cpp  ControlCore.h  ControlTypes.h  ModRouter.cpp  ModRouter.h  SequencerEngine.cpp  SequencerEngine.h  StepSequencer.cpp  StepSequencer.h  TriggerSource.cpp  TriggerSource.h
core/dsp/: Envelope.cpp  Envelope.h  FastTanh.h  FilterTables.cpp  FilterTables.h  FirOversampler.cpp  FirOversampler.h  LadderFilter.cpp  LadderFilter.h  LadderReferenceTPT.cpp  LadderReferenceTPT.h  Lfo.cpp  Lfo.h  MinBlepTable.cpp  MinBlepTable.h  ModRouting.cpp  ModRouting.h  NoiseSource.cpp  NoiseSource.h  OscAaMode.h  Oscillator.cpp  Oscillator.h  OscillatorSection.cpp  OscillatorSection.h  OversampledZone.cpp  OversampledZone.h  Oversampler.cpp  Oversampler.h  PolyBlep.h  SubOscillator.cpp  SubOscillator.h  Vca.cpp  Vca.h  VcaGate.cpp  VcaGate.h
core/dsp/drift/: DriftModel.cpp  DriftModel.h  DriftState.h  ThermalState.h  VintageMacro.cpp  VintageMacro.h  (+1 more)
core/params/: ParamDefs.cpp  ParamDefs.h  ParamIDs.h  ParamSnapshot.h  Smoother.h  SmoothingClass.h
core/preset/: PresetBake.h
core/state/: Extras.h  InitPatch.cpp  InitPatch.h  Migration.cpp  Migration.h  StateTree.h
core/ui/: SvgAssets.h  Telemetry.h
core/util/: Prng.h
core/version/: EngineVersion.h  RenderProvenance.h  RenderVersionState.cpp  RenderVersionState.h
core/voice/: Glide.cpp  Glide.h  KeyAssigner.cpp  KeyAssigner.h  PolyAllocator.cpp  PolyAllocator.h  Voice.cpp  Voice.h  VoiceManager.cpp  VoiceManager.h  VoiceTypes.h
plugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
plugin/host/: Capabilities.h  CapabilityShim.cpp  CapabilityShim.h  HostEvent.h
plugin/latency/: LatencyReporter.cpp  LatencyReporter.h
plugin/midi/: CcLearnMap.cpp  CcLearnMap.h  EventTranslator.cpp  EventTranslator.h  MidiFrontEnd.cpp  MidiFrontEnd.h  MpeReconstructor.cpp  MpeReconstructor.h  TuningBendWiring.cpp  TuningBendWiring.h
plugin/params/: ParamBridge.cpp  ParamBridge.h  ParameterLayout.cpp  ParameterLayout.h
plugin/preset/: PresetFormat.cpp  PresetFormat.h  PresetManager.cpp  PresetManager.h
plugin/state/: CcLearnCodec.cpp  CcLearnCodec.h  LoadFailure.cpp  LoadFailure.h  SeqPatternCodec.cpp  SeqPatternCodec.h  SeqPatternHandoff.h  StateSerializer.cpp  StateSerializer.h  ValueTreeMutableAdapter.h
plugin/ui/: BackgroundLayer.cpp  EditorPrefsKeys.h  MwAudioEditor.cpp  MwAudioLookAndFeel.cpp  PresetBrowser.cpp  ScopeMeterOverlay.cpp  Signposts.cpp  StatusBanner.cpp
tests/: CMakeLists.txt
tests/golden/: CompareExact.h  CompareFp.h  CpuBudget.h  CpuBudgetManifest.h  GoldenKey.h  GoldenStore.h  KeyAssignerReference.h  Manifest.h  RenderHarness.h  Sha256.h  Stimulus.h
tests/integration/: CapabilityMatrixIntegrationTest.cpp  RenderVersionE2ETest.cpp
tests/invariants/: AudioThreadGuard.cpp  AudioThreadGuard.h  AudioThreadGuardTest.cpp  FpDisciplineCheck.cpp  LicenseHeaderCheck.cpp
tests/plugin/: AcidBassLeadPresetTest.cpp  BackgroundLayerTest.cpp  BlipsFxPresetsTest.cpp  CapabilityShimTest.cpp  CcBendAlignmentTest.cpp  CcLearnCodecTest.cpp  CcLearnMapTest.cpp  ControllerStripTest.cpp  CustomControlsTest.cpp  EventTranslatorTest.cpp  FactoryPresetCorpusTest.cpp  GuiDataPathsTest.cpp  HardwareAccurate442PresetTest.cpp  HostSmokeTest.cpp  LatencyReporterTest.cpp  LoadFailureTest.cpp  MidiFrontEndTest.cpp  ModulatorModuleTest.cpp  MpeReconstructorTest.cpp  MwAudioEditorTest.cpp  MwAudioEditorTimerTest.cpp  MwAudioLookAndFeelTest.cpp  ParamBridgeTest.cpp  ParameterLayoutTest.cpp  PluginHarnessTest.cpp  PresetBankCoverageTest.cpp  PresetBaselineTest.cpp  PresetBrowserTest.cpp  PresetFormatTest.cpp  PresetManagerTest.cpp  PresetRecallSeqTest.cpp  PresetSeqArpRiffTest.cpp  PresetSeqAudioTest.cpp  PresetSubBassTest.cpp  PresetsLeadTest.cpp  PresetsRoundtripTest.cpp  ProcessorShellTest.cpp  ProcessorWireTest.cpp  PwmStringsPresetsTest.cpp  RenderBackendTest.cpp  (+15 more)
tests/unit/: ArpeggiatorTest.cpp  BlessTest.cpp  BlockContextTest.cpp  CalibrationSelfTestsTest.cpp  CalibrationTest.cpp  CapabilitiesTest.cpp  CcIngressTest.cpp  ChorusTest.cpp  ClockTest.cpp  CompareExactTest.cpp  CompareFpTest.cpp  ConstantSetSelectorTest.cpp  ControlCoreDriverTest.cpp  ControlTypesTest.cpp  CpuBudgetTest.cpp  CrossFormatExactTest.cpp  DispatchCharacterTest.cpp  DispatchCompleteTest.cpp  DispatchFxTest.cpp  DispatchGapPwmVcfTest.cpp  DispatchLfoModTest.cpp  DispatchSeqArpTest.cpp  DispatchVcfTest.cpp  DispatchVcoTest.cpp  DriftModelTest.cpp  DriftStateTest.cpp  DriveTest.cpp  EndToEndAudioSmokeTest.cpp  EndToEndDeterminismTest.cpp  EngineAssemblyTest.cpp  EngineGateTrigModeTest.cpp  EngineResetTest.cpp  EngineRtSafeTest.cpp  EngineSequencerTest.cpp  EngineVersionTest.cpp  EnvLfoVcaConstantsTest.cpp  EnvLfoVcaDezipTest.cpp  EnvLfoVcaRtSafeTest.cpp  EnvelopeCurveTest.cpp  EnvelopeHeaderTest.cpp  (+79 more)
(+409 files in other folders)
